@@ -1,39 +1,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.7.17</version>
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>fr.insee</groupId>
 	<artifactId>Pogues-BO</artifactId>
-	<packaging>war</packaging>
-	<version>4.2.2</version>
+	<packaging>jar</packaging>
+	<version>4.3.3</version>
 	<name>Pogues-BO</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>11</java.version>
-		<final.war.name>rmes-pogbo</final.war.name>
-		
+		<java.version>17</java.version>
+		<final.asset.name>pogues-bo</final.asset.name>
+
 		<json-simple.version>1.1.1</json-simple.version>
 		<pogues-model.version>1.0.5</pogues-model.version>
-		<fop.version>2.7</fop.version>
-		<springdoc-openapi-ui.version>1.6.6</springdoc-openapi-ui.version>
-		<jacoco.version>0.8.7</jacoco.version>
-		<saxon.version>11.2</saxon.version>
-		<commons.io.version>2.11.0</commons.io.version>
+		<fop.version>2.9</fop.version>
+		<springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
+		<jacoco.version>0.8.11</jacoco.version>
+		<saxon.version>12.3</saxon.version>
+		<commons.io.version>2.15.0</commons.io.version>
+		<!-- Temp version due to security issues in version used in springdoc-openapi-ui: -->
+		<snakeyaml.version>2.2</snakeyaml.version>
 
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.language>java</sonar.language>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.language>java</sonar.language>
+		<argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<dependencies>
@@ -62,12 +64,12 @@
 
 
 		<dependency>
-		    <groupId>com.fasterxml.jackson.jaxrs</groupId>
-		    <artifactId>jackson-jaxrs-base</artifactId>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-base</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>com.fasterxml.jackson.jaxrs</groupId>
-		    <artifactId>jackson-jaxrs-json-provider</artifactId>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
 		</dependency>
 
 		<dependency>
@@ -107,11 +109,11 @@
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.commons</groupId>
-    				<artifactId>commons-lang3</artifactId>
+					<artifactId>commons-lang3</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
- 		<dependency>
+		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>${json-simple.version}</version>
@@ -145,7 +147,7 @@
 			<artifactId>xmlunit-matchers</artifactId>
 			<scope>test</scope>
 		</dependency>
- 		<dependency>
+		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
 			<scope>provided</scope>
@@ -159,7 +161,7 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>${springdoc-openapi-ui.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -174,46 +176,59 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+
+		<!-- TODO: the following dependencies might be further updated when in java 17 -->
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.moxy</artifactId>
-			<version>2.6.0</version>
+			<version>2.7.13</version>			<!-- 4.0.2 -->
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>			<!-- jakarta.xml.bind -->
+			<artifactId>jaxb-api</artifactId>			<!-- jakarta.xml.bind-api -->
+			<version>2.3.1</version>			<!-- 4.0.1 -->
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>			<!-- jakarta.json -->
+			<version>1.1.4</version>			<!-- 2.0.1 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
-		<finalName>${final.war.name}</finalName>
+		<finalName>${final.asset.name}</finalName>
 		<plugins>
 
-			 <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-				 <executions>
-					 <execution>
-						 <id>prepare-agent</id>
-						 <goals>
-							 <goal>prepare-agent</goal>
-						 </goals>
-					 </execution>
-					 <execution>
-						 <id>report</id>
-						 <goals>
-							 <goal>report</goal>
-						 </goals>
-						 <configuration>
-							 <formats>
-								 <format>XML</format>
-							 </formats>
-						 </configuration>
-					 </execution>
-				 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.7.0.1746</version>
-            </plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<formats>
+								<format>XML</format>
+							</formats>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.10.0.2594</version>
+			</plugin>
 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
